Kleopatra: Improve initial column layout in smart card views
Closed, ResolvedPublic

Assigned To
Authored By
• ikloecker
Apr 10 2024, 11:49 AM
Tags

Description

If one opens the smart card view for the very first time with a card (NetKey or generic PKCS#15) with unknown certificates then some of the columns are too narrow for their contents.

This happens because the columns are resized to their contents before the certificates have been loaded from the card so that the columns are just large enough for the column headers.

Event Timeline

• ikloecker created this task.
• ikloecker changed the task status from Open to Testing.Apr 10 2024, 12:54 PM
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Fixed. This improves the first impression when users use the first smart card with Kleopatra.

Hints for testing:

  • Ensure that the smart card certificates are deleted.
  • Quit Kleopatra.
  • Delete the section [CardKeysView] in kleopatrastaterc.
  • Start Kleopatra (either with smart card already inserted or inserted later).
  • Open the smart card view (and click Reload if card was inserted later).

Expected result:
The first two columns should be 260 pixels wide. The other columns should be as narrow/wide as necessary.

Additional test:
Show/hide some columns. The size of the unchanged columns shouldn't change. The columns that are made visible should be as narrow/wide as necessary.

With Version 3.2.2.2405000+git~ (Gpg4win-4.3.2-beta41) I see the expected result. The width for the additional columns is as expected too. So I'll mark this task as done.

But we should consider making a new follow up task as:

The columns "Last update" and "Tags" do not show up at all if I select them in this first view of a card. They are only shown after a restart of Kleopatra, where the first of those does not get the "wide enough" width:

As these columns are not widely used and it only occurs on the first view, it would be a very low prio, though…

• ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ebo moved this task from QA to vsd-3.3.0 on the vsd33 board.
• ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.