Remove automatic column resize on show/hide column

This clears the users' column layout. We don't want this.

GnuPG-bug-id: 7082